@@ -11,15 +11,8 @@
 
 namespace Volt
 {
-    #define STR_TEMPBUF_MIN_SIZE        1024
-
     VoltShaderSet* shader_set_head;
     VoltShaderSet* shader_set_tail;
-    
-    // Using a vector is the most sensible thing here.
-    // This does not fit
-    // Minimum size provided so that we don't endlessly resize ofr the first bit
-    std::vector<char> shader_tempbuf(STR_TEMPBUF_MIN_SIZE);
 
     // Load a shader as part of a shader set
     bool Shader_Load(const char* file_path, VoltShaderSet* shader_set, VoltShaderType shader_type)
@@ -42,12 +35,11 @@ namespace Volt
 
         if (!file)
         {
-            Logging_LogChannel("Failed to open shader file %s", LogChannel::Error);
+            Logging_LogChannel("Failed to open shader file %s", LogChannel::Error, file_path);
             return false; 
         }
 
         size_t size = Filesystem_GetFileSize(file);
-
         const char* shader_code; 
 
         // TODO: WARNING: CRAP!
@@ -89,7 +81,7 @@ namespace Volt
         {
             if (!Shader_Load(vertex_path, shader_set, VoltShaderType::Vertex))
             {
-                Logging_LogChannel("Failed to compile vertex shader at %s!", LogChannel::Debug);
+                Logging_LogChannel("Failed to compile vertex shader at %s!", LogChannel::Debug, vertex_path);
                 return false;
             }
         }
@@ -98,7 +90,7 @@ namespace Volt
         {
             if (!Shader_Load(fragment_path, shader_set, VoltShaderType::Fragment))
             {
-                Logging_LogChannel("Failed to compile fragment shader at %s!", LogChannel::Debug);
+                Logging_LogChannel("Failed to compile fragment shader at %s!", LogChannel::Debug, fragment_path);
                 return false;
             }
         }
@@ -107,16 +99,16 @@ namespace Volt
         {
             if (!Shader_Load(compute_path, shader_set, VoltShaderType::Compute))
             {
-                Logging_LogChannel("Failed to compile compute shader at %s!", LogChannel::Debug);
+                Logging_LogChannel("Failed to compile compute shader at %s!", LogChannel::Debug, compute_path);
                 return false;
             }
         }
 
         if (geometry_path)
         {
-            if (!Shader_Load(compute_path, shader_set, VoltShaderType::Geometry))
+            if (!Shader_Load(geometry_path, shader_set, VoltShaderType::Geometry))
             {
-                Logging_LogChannel("Failed to compile geometry shader at %s!", LogChannel::Debug);
+                Logging_LogChannel("Failed to compile geometry shader at %s!", LogChannel::Debug, geometry_path);
                 return false;
             }
         }
